SonarValidator_Prober/parser/generated/grammar/SwitchTopologyParser.cpp

// Generated from grammar/SwitchTopology.g4 by ANTLR 4.13.2


#include "SwitchTopologyVisitor.h"

#include "SwitchTopologyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SwitchTopologyParserStaticData final {
  SwitchTopologyParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SwitchTopologyParserStaticData(const SwitchTopologyParserStaticData&) = delete;
  SwitchTopologyParserStaticData(SwitchTopologyParserStaticData&&) = delete;
  SwitchTopologyParserStaticData& operator=(const SwitchTopologyParserStaticData&) = delete;
  SwitchTopologyParserStaticData& operator=(SwitchTopologyParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag switchtopologyParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SwitchTopologyParserStaticData> switchtopologyParserStaticData = nullptr;

void switchtopologyParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (switchtopologyParserStaticData != nullptr) {
    return;
  }
#else
  assert(switchtopologyParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SwitchTopologyParserStaticData>(
    std::vector<std::string>{
      "runningDocument", "vlanDocument", "briefDocument", "portDocument", 
      "configLine", "vlanItem", "vlanHeader", "vlanEntry", "vlanSeparator", 
      "vlanId", "vlanName", "vlanStatus", "portList", "portToken", "nameToken", 
      "briefItem", "briefHeader", "briefEntry", "addrOrUnassigned", "briefField", 
      "portItem", "portEntry", "ifname", "genericLine", "blank", "elem"
    },
    std::vector<std::string>{
      "", "", "", "'VLAN'", "", "", "", "", "'unassigned'", "", "", "", 
      "", "", "','", "':'", "'/'"
    },
    std::vector<std::string>{
      "", "NEWLINE", "WS", "VLAN", "INTERFACE", "ADDR", "NUMBER", "PORTNAME", 
      "UNASSIGNED", "DASHES", "STATUSWORD", "IFNAME", "ATTRWORD", "IDENT", 
      "COMMA", "COLON", "SLASH"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  switchtopologyParserStaticData = std::move(staticData);
}

}

SwitchTopologyParser::SwitchTopologyParser(TokenStream *input) : SwitchTopologyParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SwitchTopologyParser::SwitchTopologyParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SwitchTopologyParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *switchtopologyParserStaticData->atn, switchtopologyParserStaticData->decisionToDFA, switchtopologyParserStaticData->sharedContextCache, options);
}

SwitchTopologyParser::~SwitchTopologyParser() {
  delete _interpreter;
}

const atn::ATN& SwitchTopologyParser::getATN() const {
  return *switchtopologyParserStaticData->atn;
}

std::string SwitchTopologyParser::getGrammarFileName() const {
  return "SwitchTopology.g4";
}

const std::vector<std::string>& SwitchTopologyParser::getRuleNames() const {
  return switchtopologyParserStaticData->ruleNames;
}

const dfa::Vocabulary& SwitchTopologyParser::getVocabulary() const {
  return switchtopologyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SwitchTopologyParser::getSerializedATN() const {
  return switchtopologyParserStaticData->serializedATN;
}


//----------------- RunningDocumentContext ------------------------------------------------------------------

SwitchTopologyParser::RunningDocumentContext::RunningDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwitchTopologyParser::RunningDocumentContext::EOF() {
  return getToken(SwitchTopologyParser::EOF, 0);
}

std::vector<SwitchTopologyParser::ConfigLineContext *> SwitchTopologyParser::RunningDocumentContext::configLine() {
  return getRuleContexts<SwitchTopologyParser::ConfigLineContext>();
}

SwitchTopologyParser::ConfigLineContext* SwitchTopologyParser::RunningDocumentContext::configLine(size_t i) {
  return getRuleContext<SwitchTopologyParser::ConfigLineContext>(i);
}


size_t SwitchTopologyParser::RunningDocumentContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleRunningDocument;
}


std::any SwitchTopologyParser::RunningDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitRunningDocument(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::RunningDocumentContext* SwitchTopologyParser::runningDocument() {
  RunningDocumentContext *_localctx = _tracker.createInstance<RunningDocumentContext>(_ctx, getState());
  enterRule(_localctx, 0, SwitchTopologyParser::RuleRunningDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131068) != 0)) {
      setState(52);
      configLine();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(58);
    match(SwitchTopologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VlanDocumentContext ------------------------------------------------------------------

SwitchTopologyParser::VlanDocumentContext::VlanDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwitchTopologyParser::VlanDocumentContext::EOF() {
  return getToken(SwitchTopologyParser::EOF, 0);
}

std::vector<SwitchTopologyParser::VlanItemContext *> SwitchTopologyParser::VlanDocumentContext::vlanItem() {
  return getRuleContexts<SwitchTopologyParser::VlanItemContext>();
}

SwitchTopologyParser::VlanItemContext* SwitchTopologyParser::VlanDocumentContext::vlanItem(size_t i) {
  return getRuleContext<SwitchTopologyParser::VlanItemContext>(i);
}


size_t SwitchTopologyParser::VlanDocumentContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleVlanDocument;
}


std::any SwitchTopologyParser::VlanDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitVlanDocument(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::VlanDocumentContext* SwitchTopologyParser::vlanDocument() {
  VlanDocumentContext *_localctx = _tracker.createInstance<VlanDocumentContext>(_ctx, getState());
  enterRule(_localctx, 2, SwitchTopologyParser::RuleVlanDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131070) != 0)) {
      setState(60);
      vlanItem();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(66);
    match(SwitchTopologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BriefDocumentContext ------------------------------------------------------------------

SwitchTopologyParser::BriefDocumentContext::BriefDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwitchTopologyParser::BriefDocumentContext::EOF() {
  return getToken(SwitchTopologyParser::EOF, 0);
}

std::vector<SwitchTopologyParser::BriefItemContext *> SwitchTopologyParser::BriefDocumentContext::briefItem() {
  return getRuleContexts<SwitchTopologyParser::BriefItemContext>();
}

SwitchTopologyParser::BriefItemContext* SwitchTopologyParser::BriefDocumentContext::briefItem(size_t i) {
  return getRuleContext<SwitchTopologyParser::BriefItemContext>(i);
}


size_t SwitchTopologyParser::BriefDocumentContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleBriefDocument;
}


std::any SwitchTopologyParser::BriefDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitBriefDocument(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::BriefDocumentContext* SwitchTopologyParser::briefDocument() {
  BriefDocumentContext *_localctx = _tracker.createInstance<BriefDocumentContext>(_ctx, getState());
  enterRule(_localctx, 4, SwitchTopologyParser::RuleBriefDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131070) != 0)) {
      setState(68);
      briefItem();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(SwitchTopologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PortDocumentContext ------------------------------------------------------------------

SwitchTopologyParser::PortDocumentContext::PortDocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwitchTopologyParser::PortDocumentContext::EOF() {
  return getToken(SwitchTopologyParser::EOF, 0);
}

std::vector<SwitchTopologyParser::PortItemContext *> SwitchTopologyParser::PortDocumentContext::portItem() {
  return getRuleContexts<SwitchTopologyParser::PortItemContext>();
}

SwitchTopologyParser::PortItemContext* SwitchTopologyParser::PortDocumentContext::portItem(size_t i) {
  return getRuleContext<SwitchTopologyParser::PortItemContext>(i);
}


size_t SwitchTopologyParser::PortDocumentContext::getRuleIndex() const {
  return SwitchTopologyParser::RulePortDocument;
}


std::any SwitchTopologyParser::PortDocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitPortDocument(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::PortDocumentContext* SwitchTopologyParser::portDocument() {
  PortDocumentContext *_localctx = _tracker.createInstance<PortDocumentContext>(_ctx, getState());
  enterRule(_localctx, 6, SwitchTopologyParser::RulePortDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131070) != 0)) {
      setState(76);
      portItem();
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(82);
    match(SwitchTopologyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigLineContext ------------------------------------------------------------------

SwitchTopologyParser::ConfigLineContext::ConfigLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwitchTopologyParser::ConfigLineContext::NEWLINE() {
  return getToken(SwitchTopologyParser::NEWLINE, 0);
}

std::vector<SwitchTopologyParser::ElemContext *> SwitchTopologyParser::ConfigLineContext::elem() {
  return getRuleContexts<SwitchTopologyParser::ElemContext>();
}

SwitchTopologyParser::ElemContext* SwitchTopologyParser::ConfigLineContext::elem(size_t i) {
  return getRuleContext<SwitchTopologyParser::ElemContext>(i);
}


size_t SwitchTopologyParser::ConfigLineContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleConfigLine;
}


std::any SwitchTopologyParser::ConfigLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitConfigLine(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::ConfigLineContext* SwitchTopologyParser::configLine() {
  ConfigLineContext *_localctx = _tracker.createInstance<ConfigLineContext>(_ctx, getState());
  enterRule(_localctx, 8, SwitchTopologyParser::RuleConfigLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(84);
      elem();
      setState(87); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131068) != 0));
    setState(89);
    match(SwitchTopologyParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VlanItemContext ------------------------------------------------------------------

SwitchTopologyParser::VlanItemContext::VlanItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SwitchTopologyParser::VlanHeaderContext* SwitchTopologyParser::VlanItemContext::vlanHeader() {
  return getRuleContext<SwitchTopologyParser::VlanHeaderContext>(0);
}

SwitchTopologyParser::VlanEntryContext* SwitchTopologyParser::VlanItemContext::vlanEntry() {
  return getRuleContext<SwitchTopologyParser::VlanEntryContext>(0);
}

SwitchTopologyParser::VlanSeparatorContext* SwitchTopologyParser::VlanItemContext::vlanSeparator() {
  return getRuleContext<SwitchTopologyParser::VlanSeparatorContext>(0);
}

SwitchTopologyParser::GenericLineContext* SwitchTopologyParser::VlanItemContext::genericLine() {
  return getRuleContext<SwitchTopologyParser::GenericLineContext>(0);
}

SwitchTopologyParser::BlankContext* SwitchTopologyParser::VlanItemContext::blank() {
  return getRuleContext<SwitchTopologyParser::BlankContext>(0);
}


size_t SwitchTopologyParser::VlanItemContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleVlanItem;
}


std::any SwitchTopologyParser::VlanItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitVlanItem(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::VlanItemContext* SwitchTopologyParser::vlanItem() {
  VlanItemContext *_localctx = _tracker.createInstance<VlanItemContext>(_ctx, getState());
  enterRule(_localctx, 10, SwitchTopologyParser::RuleVlanItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(96);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(91);
      vlanHeader();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(92);
      vlanEntry();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(93);
      vlanSeparator();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(94);
      genericLine();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(95);
      blank();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VlanHeaderContext ------------------------------------------------------------------

SwitchTopologyParser::VlanHeaderContext::VlanHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwitchTopologyParser::VlanHeaderContext::VLAN() {
  return getToken(SwitchTopologyParser::VLAN, 0);
}

tree::TerminalNode* SwitchTopologyParser::VlanHeaderContext::NEWLINE() {
  return getToken(SwitchTopologyParser::NEWLINE, 0);
}

std::vector<SwitchTopologyParser::ElemContext *> SwitchTopologyParser::VlanHeaderContext::elem() {
  return getRuleContexts<SwitchTopologyParser::ElemContext>();
}

SwitchTopologyParser::ElemContext* SwitchTopologyParser::VlanHeaderContext::elem(size_t i) {
  return getRuleContext<SwitchTopologyParser::ElemContext>(i);
}


size_t SwitchTopologyParser::VlanHeaderContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleVlanHeader;
}


std::any SwitchTopologyParser::VlanHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitVlanHeader(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::VlanHeaderContext* SwitchTopologyParser::vlanHeader() {
  VlanHeaderContext *_localctx = _tracker.createInstance<VlanHeaderContext>(_ctx, getState());
  enterRule(_localctx, 12, SwitchTopologyParser::RuleVlanHeader);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(SwitchTopologyParser::VLAN);
    setState(102);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131068) != 0)) {
      setState(99);
      elem();
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(105);
    match(SwitchTopologyParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VlanEntryContext ------------------------------------------------------------------

SwitchTopologyParser::VlanEntryContext::VlanEntryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SwitchTopologyParser::VlanIdContext* SwitchTopologyParser::VlanEntryContext::vlanId() {
  return getRuleContext<SwitchTopologyParser::VlanIdContext>(0);
}

SwitchTopologyParser::VlanNameContext* SwitchTopologyParser::VlanEntryContext::vlanName() {
  return getRuleContext<SwitchTopologyParser::VlanNameContext>(0);
}

SwitchTopologyParser::VlanStatusContext* SwitchTopologyParser::VlanEntryContext::vlanStatus() {
  return getRuleContext<SwitchTopologyParser::VlanStatusContext>(0);
}

tree::TerminalNode* SwitchTopologyParser::VlanEntryContext::NEWLINE() {
  return getToken(SwitchTopologyParser::NEWLINE, 0);
}

SwitchTopologyParser::PortListContext* SwitchTopologyParser::VlanEntryContext::portList() {
  return getRuleContext<SwitchTopologyParser::PortListContext>(0);
}

std::vector<SwitchTopologyParser::ElemContext *> SwitchTopologyParser::VlanEntryContext::elem() {
  return getRuleContexts<SwitchTopologyParser::ElemContext>();
}

SwitchTopologyParser::ElemContext* SwitchTopologyParser::VlanEntryContext::elem(size_t i) {
  return getRuleContext<SwitchTopologyParser::ElemContext>(i);
}


size_t SwitchTopologyParser::VlanEntryContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleVlanEntry;
}


std::any SwitchTopologyParser::VlanEntryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitVlanEntry(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::VlanEntryContext* SwitchTopologyParser::vlanEntry() {
  VlanEntryContext *_localctx = _tracker.createInstance<VlanEntryContext>(_ctx, getState());
  enterRule(_localctx, 14, SwitchTopologyParser::RuleVlanEntry);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    vlanId();
    setState(108);
    vlanName();
    setState(109);
    vlanStatus();
    setState(111);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(110);
      portList();
      break;
    }

    default:
      break;
    }
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131068) != 0)) {
      setState(113);
      elem();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(119);
    match(SwitchTopologyParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VlanSeparatorContext ------------------------------------------------------------------

SwitchTopologyParser::VlanSeparatorContext::VlanSeparatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwitchTopologyParser::VlanSeparatorContext::DASHES() {
  return getToken(SwitchTopologyParser::DASHES, 0);
}

tree::TerminalNode* SwitchTopologyParser::VlanSeparatorContext::NEWLINE() {
  return getToken(SwitchTopologyParser::NEWLINE, 0);
}

std::vector<SwitchTopologyParser::ElemContext *> SwitchTopologyParser::VlanSeparatorContext::elem() {
  return getRuleContexts<SwitchTopologyParser::ElemContext>();
}

SwitchTopologyParser::ElemContext* SwitchTopologyParser::VlanSeparatorContext::elem(size_t i) {
  return getRuleContext<SwitchTopologyParser::ElemContext>(i);
}


size_t SwitchTopologyParser::VlanSeparatorContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleVlanSeparator;
}


std::any SwitchTopologyParser::VlanSeparatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitVlanSeparator(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::VlanSeparatorContext* SwitchTopologyParser::vlanSeparator() {
  VlanSeparatorContext *_localctx = _tracker.createInstance<VlanSeparatorContext>(_ctx, getState());
  enterRule(_localctx, 16, SwitchTopologyParser::RuleVlanSeparator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    match(SwitchTopologyParser::DASHES);
    setState(125);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131068) != 0)) {
      setState(122);
      elem();
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(128);
    match(SwitchTopologyParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VlanIdContext ------------------------------------------------------------------

SwitchTopologyParser::VlanIdContext::VlanIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwitchTopologyParser::VlanIdContext::NUMBER() {
  return getToken(SwitchTopologyParser::NUMBER, 0);
}


size_t SwitchTopologyParser::VlanIdContext::getRuleIndex() const {
  return SwitchTopologyParser::RuleVlanId;
}


std::any SwitchTopologyParser::VlanIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SwitchTopologyVisitor*>(visitor))
    return parserVisitor->visitVlanId(this);
  else
    return visitor->visitChildren(this);
}

SwitchTopologyParser::VlanIdContext* SwitchTopologyParser::vlanId() {
  VlanIdContext *_localctx = _tracker.createInstance<VlanIdContext>(_ctx, getState());
  enterRule(_localctx, 18, SwitchTopologyParser::RuleVlanId);
